<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wdpr.ee</groupId>
    <artifactId>wdpr-authz</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <name>wdpr-authz</name>
    <parent>
        <groupId>com.wdpr.maven</groupId>
        <artifactId>wdpr-parent</artifactId>
        <version>1.1-SNAPSHOT</version>
        <relativePath></relativePath>
    </parent>
    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient-cache</artifactId>
            <version>4.4</version>
        </dependency>
        <!--dependency>
            <groupId>com.wdpr.ee</groupId>
            <artifactId>wdpr-loggingapi</artifactId>
            <version>1.7</version>
        </dependency-->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.15</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.mail</groupId>
                    <artifactId>mail</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jdmk</groupId>
                    <artifactId>jmxtools</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jmx</groupId>
                    <artifactId>jmxri</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-json-org</artifactId>
          <version>2.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13</version>
        </dependency>
        <!--  Unit Test -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
        <java.runtime.version>1.7</java.runtime.version>
        <java.required.version>1.7</java.required.version>
        <java.source.version>1.7</java.source.version>
        <java.version>1.7</java.version>
        <compiler.argument>-Xlint:cast,unchecked,fallthrough,finally,serial</compiler.argument>
        <generateSitemap>true</generateSitemap>
        <dependencyConvergence>true</dependencyConvergence>
        <jacoco.skip>false</jacoco.skip>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.source.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <proc>none</proc>
                        <compilerArgument>${compiler.argument}</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <forkMode>once</forkMode>
                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                        <excludes>
                            <exclude>META-INF/*.SF</exclude>
                            <exclude>exclude "META-INF/*.DSA</exclude>
                            <exclude>exclude "META-INF/*.RSA</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                	<groupId>org.eclipse.m2e</groupId>
                	<artifactId>lifecycle-mapping</artifactId>
                	<version>1.0.0</version>
                	<configuration>
                		<lifecycleMappingMetadata>
                			<pluginExecutions>
                				<pluginExecution>
                					<pluginExecutionFilter>
                						<groupId>org.jacoco</groupId>
                						<artifactId>
                							jacoco-maven-plugin
                						</artifactId>
                						<versionRange>
                							[0.7.1.201405082137,)
                						</versionRange>
                						<goals>
                							<goal>prepare-agent</goal>
                						</goals>
                					</pluginExecutionFilter>
                					<action>
                						<ignore></ignore>
                					</action>
                				</pluginExecution>
                			</pluginExecutions>
                		</lifecycleMappingMetadata>
                	</configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Create -sources jar when building -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>